@@ -1,6 +1,6 @@
 Package: TraMineR
 Version: 1.9-9
-Date: 2014-05-23
+Date: 2014-09-15
 Title: Trajectory miner: a toolbox for exploring and rendering sequence data
 Authors@R: c(
   person("Alexis", "Gabadinho", role = c("aut", "cph")),
@@ -16,3 +16,9 @@ Description: This package is a toolbox for sequence manipulation, description, r
 License: GPL (>= 2)
 URL: http://mephisto.unige.ch/traminer
 Encoding: latin1
+Author: Alexis Gabadinho [aut, cph],
+  Matthias Studer [aut, cph],
+  Nicolas Muller [aut],
+  Reto Buergin [aut],
+  Gilbert Ritschard [aut, cre, cph]
+Maintainer: Gilbert Ritschard <gilbert.ritschard@unige.ch>
