@@ -64,7 +64,9 @@ export(
 	TraMineR.checkupdates,
 	TraMineRInternalNodeInit,
 	TraMineRInternalSplitInit,
-	TraMineRInternalLayout
+	TraMineRInternalLayout,
+	TraMineRInternalLegend, 
+	TraMineRInternalSeqeage
   )
 
 ## stslist methods
