@@ -1,18 +1,22 @@
-\name{TraMineRInternalLayout}
-\alias{TraMineRInternalNodeInit}
-\alias{TraMineRInternalSplitInit}
+\name{TraMineRInternal}
 \alias{TraMineRInternalLayout}
+\alias{TraMineRInternalLegend}
+\alias{TraMineRInternalNodeInit}
+\alias{TraMineRInternalSeqeage}
+\alias{TraMineRInternalSplitInit}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
  Access to TraMineR internal functions
 }
 \description{
-Functions allowing other packages to access some TraMineR internal functions. Corresponding functions respectively are \code{DTNInit}, \code{DTNsplit} and \code{TraMineR.setlayout}. For experts only.
+Functions allowing other packages to access some TraMineR internal functions. Corresponding functions are respectively are \code{TraMineR.setlayout}, \code{TraMineR.Legend}, \code{DTNInit}, \code{seqeage}, and \code{DTNsplit}. For experts only.
 }
 \usage{
-TraMineRInternalNodeInit(...)
-TraMineRInternalSplitInit(...)
 TraMineRInternalLayout(...)
+TraMineRInternalLegend(...)
+TraMineRInternalNodeInit(...)
+TraMineRInternalSeqeage(...)
+TraMineRInternalSplitInit(...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
